--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "jsonschema": "^1.4.1",
     "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "jest": "^29.0.3"
   }
 }
