--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install modules
         run: yarn
+      - name: Run eslint
+        run: yarn lint
       - name: Run tests
         run: yarn test
