--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint *.js */*.js"
   },
-  "author": "",
+  "author": "Paweł Stepaniuk <pawel66556655@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "eslint-plugin-import": "^2.26.0",
     "jsonschema": "^1.4.1",
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "eslint": "^8.23.1",
     "jest": "^29.0.3"
   }
 }
