--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: CI
-on: push
+"on":
+    push:
+        branches:
+            - main
+    workflow_dispatch: {}
 jobs:
   tests:
     runs-on: ubuntu-latest
