--- a/server.yaml
+++ b/server.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: acrworkflow1666964895974.azurecr.io/image-workflow-1666964895974
+          image: vnsacr.azurecr.io/vanilla-node-server
           ports:
           - containerPort: 80
 ---
