--- a/.github/workflows/vnsDeployment.yaml
+++ b/.github/workflows/vnsDeployment.yaml
@@ -35,9 +35,7 @@ jobs:
       - uses: azure/login@v1.4.3
         name: Azure login
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: Build and push image to ACR
         run: az acr build --image ${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.ACR_RESOURCE_GROUP }} -f ./Dockerfile ./
   deploy:
@@ -53,9 +51,7 @@ jobs:
       - uses: azure/login@v1.4.3
         name: Azure login
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       - uses: azure/aks-set-context@v3
         name: Get K8s context
         with:
